@@ -8,7 +8,8 @@
     Bug #19481 Where clause with datetime throws exception [any warning causes the exception] [fixed]
     Bug #15077 Error MySqlCommandBuilder.DeriveParameters for sp without parameters. [fixed]
     Bug #16934 Unsigned values > 2^63 (UInt64) cannot be used in prepared statements
-    
+	Bug #19515 DiscoverParameters fails on numeric datatype [fixed]
+	
 x-xx-05 - Version 1.0.7
 
     Bugs fixed or addressed
